RESOLVED FIXED275071
[WebGPU] Buffer binding size check does not take into account binding offset
https://bugs.webkit.org/show_bug.cgi?id=275071
Summary [WebGPU] Buffer binding size check does not take into account binding offset
Mike Wyrzykowski
Reported 2024-06-03 13:06:45 PDT
[WebGPU] Buffer binding size check does not take into account binding offset
Attachments
Mike Wyrzykowski
Comment 1 2024-06-03 13:06:57 PDT
Mike Wyrzykowski
Comment 2 2024-06-03 13:13:05 PDT
EWS
Comment 3 2024-06-03 22:52:32 PDT
Committed 279689@main (f0946544d1cf): <https://commits.webkit.org/279689@main> Reviewed commits have been landed. Closing PR #29471 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.