[WebGPU] Buffer binding size check does not take into account binding offset https://bugs.webkit.org/show_bug.cgi?id=275071 <radar://129160139>

Reviewed by Dan Glastonbury.

Correct buffer size validation so the buffer offset is taken into account.

* LayoutTests/fast/webgpu/regression/repro_275071-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_275071.html: Added.
Add regression tests.

* Source/WebGPU/WebGPU/BindGroup.mm:
(WebGPU::makeBindGroupEntryUsageData):
(WebGPU::Device::createBindGroup):
* Source/WebGPU/WebGPU/BindableResource.h:
* Source/WebGPU/WebGPU/Pipeline.mm:
(WebGPU::errorValidatingBindGroup):

Canonical link: https://commits.webkit.org/279689@main